update de test